cmake_minimum_required(VERSION 3.0.0)
set(SFML_PATH "F:/Externallib/SFML-2.5.1-windows-vc15-64-bit/SFML-2.5.1")
project(RandomWalker VERSION 1.0.0)
include_directories(${SFML_PATH}/include) 
link_directories(${SFML_PATH}/lib)
add_executable(Spring src/main.cpp)
target_link_libraries(Spring debug sfml-graphics-d.lib sfml-window-d.lib sfml-system-d.lib)